fix(update test): Change the part of the code responsible for updating the test